PcadParser.js
// Generated from Pcad.g4 by ANTLR 4.13.0
// jshint ignore: start
import antlr4 from 'antlr4';
import PcadListener from './PcadListener.js';


const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.atn.PredictionContextCache();

export default class PcadParser extends antlr4.Parser {

    static grammarFileName = "Pcad.g4";
    static literalNames = [ null, "'if'", "'elseif'", "'else'", "'loop'", 
                            "'function'", "'undefined'", "'null'", null, 
                            null, null, null, null, null, "'''", "'\"'", 
                            "'`'", "'('", "')'", "'{'", "'}'", "'['", "']'", 
                            "'.'", "','", "';'", "'?'", "':'", "'\\'", "'+'", 
                            "'-'", "'*'", "'/'", "'%'", "'^'", "'&'", "'|'", 
                            "'!'", "'<'", "'>'", "'='", "'&&'", "'||'", 
                            "'^^'", "'<='", "'>='", "'=='", "'!='" ];
    static symbolicNames = [ null, "IF", "ELSEIF", "ELSE", "LOOP", "FUNCTION", 
                             "UNDEF", "NULL", "STRING", "BOOLEAN", "NUMBER", 
                             "COMMENT", "LINECOMMENT", "BLOCKCOMMENT", "SQUOTE", 
                             "DQUOTE", "BQUOTE", "LPAREN", "RPAREN", "LBRACE", 
                             "RBRACE", "LBRACK", "RBRACK", "DOT", "COMMA", 
                             "SEMI", "QUERY", "COLON", "BSLASH", "PLUS", 
                             "MINUS", "SPLAT", "SLASH", "PERCENT", "CARET", 
                             "AMPER", "PIPE", "BANG", "LT", "GT", "EQUALS", 
                             "DAMP", "DPIPE", "DCARET", "LTEQ", "GTEQ", 
                             "EQ", "NOEQ", "ID", "WS" ];
    static ruleNames = [ "prog", "statement", "assign", "expr", "funcdef", 
                         "funcdefparams", "conditional", "loop", "funccall", 
                         "funccallwithblock", "funccallparams", "codeblock", 
                         "list", "valuelist", "namedlist", "rangelist" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = PcadParser.ruleNames;
        this.literalNames = PcadParser.literalNames;
        this.symbolicNames = PcadParser.symbolicNames;
    }

    sempred(localctx, ruleIndex, predIndex) {
    	switch(ruleIndex) {
    	case 3:
    	    		return this.expr_sempred(localctx, predIndex);
        default:
            throw "No predicate with index:" + ruleIndex;
       }
    }

    expr_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 0:
    			return this.precpred(this._ctx, 7);
    		case 1:
    			return this.precpred(this._ctx, 6);
    		case 2:
    			return this.precpred(this._ctx, 5);
    		case 3:
    			return this.precpred(this._ctx, 4);
    		case 4:
    			return this.precpred(this._ctx, 3);
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };




	prog() {
	    let localctx = new ProgContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, PcadParser.RULE_prog);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 33; 
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        do {
	            this.state = 32;
	            this.statement();
	            this.state = 35; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        } while((((_la) & ~0x1f) === 0 && ((1 << _la) & 1075972082) !== 0) || _la===37 || _la===48);
	        this.state = 37;
	        this.match(PcadParser.EOF);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	statement() {
	    let localctx = new StatementContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, PcadParser.RULE_statement);
	    try {
	        this.state = 49;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,1,this._ctx);
	        switch(la_) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 39;
	            this.expr(0);
	            this.state = 40;
	            this.match(PcadParser.SEMI);
	            break;

	        case 2:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 42;
	            this.assign();
	            this.state = 43;
	            this.match(PcadParser.SEMI);
	            break;

	        case 3:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 45;
	            this.funcdef();
	            break;

	        case 4:
	            this.enterOuterAlt(localctx, 4);
	            this.state = 46;
	            this.funccallwithblock();
	            break;

	        case 5:
	            this.enterOuterAlt(localctx, 5);
	            this.state = 47;
	            this.conditional();
	            break;

	        case 6:
	            this.enterOuterAlt(localctx, 6);
	            this.state = 48;
	            this.loop();
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	assign() {
	    let localctx = new AssignContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, PcadParser.RULE_assign);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 51;
	        this.match(PcadParser.ID);
	        this.state = 52;
	        this.match(PcadParser.EQUALS);
	        this.state = 53;
	        this.expr(0);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


	expr(_p) {
		if(_p===undefined) {
		    _p = 0;
		}
	    const _parentctx = this._ctx;
	    const _parentState = this.state;
	    let localctx = new ExprContext(this, this._ctx, _parentState);
	    let _prevctx = localctx;
	    const _startState = 6;
	    this.enterRecursionRule(localctx, 6, PcadParser.RULE_expr, _p);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 72;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 30:
	        case 37:
	            this.state = 56;
	            _la = this._input.LA(1);
	            if(!(_la===30 || _la===37)) {
	            this._errHandler.recoverInline(this);
	            }
	            else {
	            	this._errHandler.reportMatch(this);
	                this.consume();
	            }
	            this.state = 57;
	            this.expr(8);
	            break;
	        case 17:
	            this.state = 58;
	            this.match(PcadParser.LPAREN);
	            this.state = 59;
	            this.expr(0);
	            this.state = 60;
	            this.match(PcadParser.RPAREN);
	            break;
	        case 6:
	        case 7:
	        case 8:
	        case 9:
	        case 10:
	        case 21:
	        case 48:
	            this.state = 70;
	            this._errHandler.sync(this);
	            var la_ = this._interp.adaptivePredict(this._input,2,this._ctx);
	            switch(la_) {
	            case 1:
	                this.state = 62;
	                this.funccall();
	                break;

	            case 2:
	                this.state = 63;
	                this.match(PcadParser.ID);
	                break;

	            case 3:
	                this.state = 64;
	                this.match(PcadParser.STRING);
	                break;

	            case 4:
	                this.state = 65;
	                this.match(PcadParser.NUMBER);
	                break;

	            case 5:
	                this.state = 66;
	                this.match(PcadParser.BOOLEAN);
	                break;

	            case 6:
	                this.state = 67;
	                this.list();
	                break;

	            case 7:
	                this.state = 68;
	                this.match(PcadParser.UNDEF);
	                break;

	            case 8:
	                this.state = 69;
	                this.match(PcadParser.NULL);
	                break;

	            }
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	        this._ctx.stop = this._input.LT(-1);
	        this.state = 91;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,5,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                if(this._parseListeners!==null) {
	                    this.triggerExitRuleEvent();
	                }
	                _prevctx = localctx;
	                this.state = 89;
	                this._errHandler.sync(this);
	                var la_ = this._interp.adaptivePredict(this._input,4,this._ctx);
	                switch(la_) {
	                case 1:
	                    localctx = new ExprContext(this, _parentctx, _parentState);
	                    this.pushNewRecursionContext(localctx, _startState, PcadParser.RULE_expr);
	                    this.state = 74;
	                    if (!( this.precpred(this._ctx, 7))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 7)");
	                    }
	                    this.state = 75;
	                    _la = this._input.LA(1);
	                    if(!(((((_la - 28)) & ~0x1f) === 0 && ((1 << (_la - 28)) & 321) !== 0))) {
	                    this._errHandler.recoverInline(this);
	                    }
	                    else {
	                    	this._errHandler.reportMatch(this);
	                        this.consume();
	                    }
	                    this.state = 76;
	                    this.expr(8);
	                    break;

	                case 2:
	                    localctx = new ExprContext(this, _parentctx, _parentState);
	                    this.pushNewRecursionContext(localctx, _startState, PcadParser.RULE_expr);
	                    this.state = 77;
	                    if (!( this.precpred(this._ctx, 6))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 6)");
	                    }
	                    this.state = 78;
	                    _la = this._input.LA(1);
	                    if(!(((((_la - 31)) & ~0x1f) === 0 && ((1 << (_la - 31)) & 7) !== 0))) {
	                    this._errHandler.recoverInline(this);
	                    }
	                    else {
	                    	this._errHandler.reportMatch(this);
	                        this.consume();
	                    }
	                    this.state = 79;
	                    this.expr(7);
	                    break;

	                case 3:
	                    localctx = new ExprContext(this, _parentctx, _parentState);
	                    this.pushNewRecursionContext(localctx, _startState, PcadParser.RULE_expr);
	                    this.state = 80;
	                    if (!( this.precpred(this._ctx, 5))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 5)");
	                    }
	                    this.state = 81;
	                    _la = this._input.LA(1);
	                    if(!(_la===29 || _la===30)) {
	                    this._errHandler.recoverInline(this);
	                    }
	                    else {
	                    	this._errHandler.reportMatch(this);
	                        this.consume();
	                    }
	                    this.state = 82;
	                    this.expr(6);
	                    break;

	                case 4:
	                    localctx = new ExprContext(this, _parentctx, _parentState);
	                    this.pushNewRecursionContext(localctx, _startState, PcadParser.RULE_expr);
	                    this.state = 83;
	                    if (!( this.precpred(this._ctx, 4))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 4)");
	                    }
	                    this.state = 84;
	                    _la = this._input.LA(1);
	                    if(!(((((_la - 41)) & ~0x1f) === 0 && ((1 << (_la - 41)) & 7) !== 0))) {
	                    this._errHandler.recoverInline(this);
	                    }
	                    else {
	                    	this._errHandler.reportMatch(this);
	                        this.consume();
	                    }
	                    this.state = 85;
	                    this.expr(5);
	                    break;

	                case 5:
	                    localctx = new ExprContext(this, _parentctx, _parentState);
	                    this.pushNewRecursionContext(localctx, _startState, PcadParser.RULE_expr);
	                    this.state = 86;
	                    if (!( this.precpred(this._ctx, 3))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 3)");
	                    }
	                    this.state = 87;
	                    _la = this._input.LA(1);
	                    if(!(((((_la - 38)) & ~0x1f) === 0 && ((1 << (_la - 38)) & 963) !== 0))) {
	                    this._errHandler.recoverInline(this);
	                    }
	                    else {
	                    	this._errHandler.reportMatch(this);
	                        this.consume();
	                    }
	                    this.state = 88;
	                    this.expr(4);
	                    break;

	                } 
	            }
	            this.state = 93;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,5,this._ctx);
	        }

	    } catch( error) {
	        if(error instanceof antlr4.error.RecognitionException) {
		        localctx.exception = error;
		        this._errHandler.reportError(this, error);
		        this._errHandler.recover(this, error);
		    } else {
		    	throw error;
		    }
	    } finally {
	        this.unrollRecursionContexts(_parentctx)
	    }
	    return localctx;
	}



	funcdef() {
	    let localctx = new FuncdefContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, PcadParser.RULE_funcdef);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 94;
	        this.match(PcadParser.FUNCTION);
	        this.state = 95;
	        this.match(PcadParser.ID);
	        this.state = 96;
	        this.funcdefparams();
	        this.state = 97;
	        this.codeblock();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	funcdefparams() {
	    let localctx = new FuncdefparamsContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, PcadParser.RULE_funcdefparams);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 99;
	        this.match(PcadParser.LPAREN);
	        this.state = 119;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===48) {
	            this.state = 104;
	            this._errHandler.sync(this);
	            var _alt = this._interp.adaptivePredict(this._input,6,this._ctx)
	            while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	                if(_alt===1) {
	                    this.state = 100;
	                    this.match(PcadParser.ID);
	                    this.state = 101;
	                    this.match(PcadParser.COMMA); 
	                }
	                this.state = 106;
	                this._errHandler.sync(this);
	                _alt = this._interp.adaptivePredict(this._input,6,this._ctx);
	            }

	            this.state = 117;
	            this._errHandler.sync(this);
	            var la_ = this._interp.adaptivePredict(this._input,8,this._ctx);
	            switch(la_) {
	            case 1:
	                this.state = 107;
	                this.match(PcadParser.ID);
	                break;

	            case 2:
	                this.state = 113;
	                this._errHandler.sync(this);
	                var _alt = this._interp.adaptivePredict(this._input,7,this._ctx)
	                while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	                    if(_alt===1) {
	                        this.state = 108;
	                        this.assign();
	                        this.state = 109;
	                        this.match(PcadParser.COMMA); 
	                    }
	                    this.state = 115;
	                    this._errHandler.sync(this);
	                    _alt = this._interp.adaptivePredict(this._input,7,this._ctx);
	                }

	                this.state = 116;
	                this.assign();
	                break;

	            }
	        }

	        this.state = 121;
	        this.match(PcadParser.RPAREN);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	conditional() {
	    let localctx = new ConditionalContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, PcadParser.RULE_conditional);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 123;
	        this.match(PcadParser.IF);
	        this.state = 132;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,10,this._ctx);
	        switch(la_) {
	        case 1:
	            this.state = 124;
	            this.expr(0);
	            this.state = 125;
	            this.codeblock();
	            break;

	        case 2:
	            this.state = 127;
	            this.match(PcadParser.LPAREN);
	            this.state = 128;
	            this.expr(0);
	            this.state = 129;
	            this.match(PcadParser.RPAREN);
	            this.state = 130;
	            this.statement();
	            break;

	        }
	        this.state = 147;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,12,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                this.state = 134;
	                this.match(PcadParser.ELSEIF);
	                this.state = 143;
	                this._errHandler.sync(this);
	                var la_ = this._interp.adaptivePredict(this._input,11,this._ctx);
	                switch(la_) {
	                case 1:
	                    this.state = 135;
	                    this.expr(0);
	                    this.state = 136;
	                    this.codeblock();
	                    break;

	                case 2:
	                    this.state = 138;
	                    this.match(PcadParser.LPAREN);
	                    this.state = 139;
	                    this.expr(0);
	                    this.state = 140;
	                    this.match(PcadParser.RPAREN);
	                    this.state = 141;
	                    this.statement();
	                    break;

	                } 
	            }
	            this.state = 149;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,12,this._ctx);
	        }

	        this.state = 155;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,14,this._ctx);
	        if(la_===1) {
	            this.state = 150;
	            this.match(PcadParser.ELSE);
	            this.state = 153;
	            this._errHandler.sync(this);
	            switch(this._input.LA(1)) {
	            case 19:
	                this.state = 151;
	                this.codeblock();
	                break;
	            case 1:
	            case 4:
	            case 5:
	            case 6:
	            case 7:
	            case 8:
	            case 9:
	            case 10:
	            case 17:
	            case 21:
	            case 30:
	            case 37:
	            case 48:
	                this.state = 152;
	                this.statement();
	                break;
	            default:
	                throw new antlr4.error.NoViableAltException(this);
	            }

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	loop() {
	    let localctx = new LoopContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 14, PcadParser.RULE_loop);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 157;
	        this.match(PcadParser.LOOP);
	        this.state = 168;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 48:
	            this.state = 158;
	            this.assign();
	            this.state = 159;
	            this.codeblock();
	            break;
	        case 17:
	            this.state = 161;
	            this.match(PcadParser.LPAREN);
	            this.state = 162;
	            this.assign();
	            this.state = 163;
	            this.match(PcadParser.RPAREN);
	            this.state = 166;
	            this._errHandler.sync(this);
	            switch(this._input.LA(1)) {
	            case 1:
	            case 4:
	            case 5:
	            case 6:
	            case 7:
	            case 8:
	            case 9:
	            case 10:
	            case 17:
	            case 21:
	            case 30:
	            case 37:
	            case 48:
	                this.state = 164;
	                this.statement();
	                break;
	            case 19:
	                this.state = 165;
	                this.codeblock();
	                break;
	            default:
	                throw new antlr4.error.NoViableAltException(this);
	            }
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	funccall() {
	    let localctx = new FunccallContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 16, PcadParser.RULE_funccall);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 170;
	        this.match(PcadParser.ID);
	        this.state = 171;
	        this.funccallparams();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	funccallwithblock() {
	    let localctx = new FunccallwithblockContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 18, PcadParser.RULE_funccallwithblock);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 173;
	        this.match(PcadParser.ID);
	        this.state = 175;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,17,this._ctx);
	        if(la_===1) {
	            this.state = 174;
	            this.funccallparams();

	        }
	        this.state = 179;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 19:
	            this.state = 177;
	            this.codeblock();
	            break;
	        case 1:
	        case 4:
	        case 5:
	        case 6:
	        case 7:
	        case 8:
	        case 9:
	        case 10:
	        case 17:
	        case 21:
	        case 30:
	        case 37:
	        case 48:
	            this.state = 178;
	            this.statement();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	funccallparams() {
	    let localctx = new FunccallparamsContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 20, PcadParser.RULE_funccallparams);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 181;
	        this.match(PcadParser.LPAREN);
	        this.state = 202;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if((((_la) & ~0x1f) === 0 && ((1 << _la) & 1075972032) !== 0) || _la===37 || _la===48) {
	            this.state = 187;
	            this._errHandler.sync(this);
	            var _alt = this._interp.adaptivePredict(this._input,19,this._ctx)
	            while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	                if(_alt===1) {
	                    this.state = 182;
	                    this.expr(0);
	                    this.state = 183;
	                    this.match(PcadParser.COMMA); 
	                }
	                this.state = 189;
	                this._errHandler.sync(this);
	                _alt = this._interp.adaptivePredict(this._input,19,this._ctx);
	            }

	            this.state = 200;
	            this._errHandler.sync(this);
	            var la_ = this._interp.adaptivePredict(this._input,21,this._ctx);
	            switch(la_) {
	            case 1:
	                this.state = 190;
	                this.expr(0);
	                break;

	            case 2:
	                this.state = 196;
	                this._errHandler.sync(this);
	                var _alt = this._interp.adaptivePredict(this._input,20,this._ctx)
	                while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	                    if(_alt===1) {
	                        this.state = 191;
	                        this.assign();
	                        this.state = 192;
	                        this.match(PcadParser.COMMA); 
	                    }
	                    this.state = 198;
	                    this._errHandler.sync(this);
	                    _alt = this._interp.adaptivePredict(this._input,20,this._ctx);
	                }

	                this.state = 199;
	                this.assign();
	                break;

	            }
	        }

	        this.state = 204;
	        this.match(PcadParser.RPAREN);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	codeblock() {
	    let localctx = new CodeblockContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 22, PcadParser.RULE_codeblock);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 206;
	        this.match(PcadParser.LBRACE);
	        this.state = 210;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while((((_la) & ~0x1f) === 0 && ((1 << _la) & 1075972082) !== 0) || _la===37 || _la===48) {
	            this.state = 207;
	            this.statement();
	            this.state = 212;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 213;
	        this.match(PcadParser.RBRACE);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	list() {
	    let localctx = new ListContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 24, PcadParser.RULE_list);
	    try {
	        this.state = 218;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,24,this._ctx);
	        switch(la_) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 215;
	            this.valuelist();
	            break;

	        case 2:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 216;
	            this.namedlist();
	            break;

	        case 3:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 217;
	            this.rangelist();
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	valuelist() {
	    let localctx = new ValuelistContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 26, PcadParser.RULE_valuelist);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 220;
	        this.match(PcadParser.LBRACK);
	        this.state = 230;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if((((_la) & ~0x1f) === 0 && ((1 << _la) & 1075972032) !== 0) || _la===37 || _la===48) {
	            this.state = 226;
	            this._errHandler.sync(this);
	            var _alt = this._interp.adaptivePredict(this._input,25,this._ctx)
	            while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	                if(_alt===1) {
	                    this.state = 221;
	                    this.expr(0);
	                    this.state = 222;
	                    this.match(PcadParser.COMMA); 
	                }
	                this.state = 228;
	                this._errHandler.sync(this);
	                _alt = this._interp.adaptivePredict(this._input,25,this._ctx);
	            }

	            this.state = 229;
	            this.expr(0);
	        }
